[project]
name = "rlpractice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets[streaming]>=4.5.0",
    "gymnasium>=1.2.3",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pybullet>=3.2.7",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
